<resources>
    <string name="app_name" translatable="false">Decks for Hearthstone</string>
    <string name="app_name_new_line" translatable="false">Decks for\nHearthstone</string>
    <string name="app_name_short" translatable="false">Decks for HS</string>

    <string name="quote_ph" translatable="false">%s</string>
    <string name="faq" translatable="false">FAQ</string>

    <string name="class_demon_hunter">Demon Hunter</string>
    <string name="class_druid">Druid</string>
    <string name="class_hunter">Hunter</string>
    <string name="class_paladin">Paladin</string>
    <string name="class_priest">Priest</string>
    <string name="class_shaman">Shaman</string>
    <string name="class_rogue">Rogue</string>
    <string name="class_warlock">Warlock</string>
    <string name="class_warrior">Warrior</string>
    <string name="class_mage">Mage</string>
    <string name="class_death_knight">Death Knight</string>

    <string name="all_decks_are_taken_from">All decks are taken from — <a href="https://hearthpwn.com">hearthpwn.com</a></string>
    <string name="question_suggestions">Questions &amp; Suggestions — <a href="mailto:iamajavagod@gmail.com">iamajavagod@gmail.com</a></string>
    <string name="privacy_policy">Privacy Policy — <a href="https://sites.google.com/view/decks-for-hearthstone-policy/home">https://sites.google.com/view/decks-for-hearthstone-policy/home</a></string>

    <string name="app_description">Find fresh community decks and save them for offline viewing.</string>

    <string name="class_image_desc">Game Class</string>
    <string name="dust_icon">Dust</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>

    <string name="artist_ph"><b>Artist:</b> %s</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="saved_decks">Saved decks</string>
    <string name="share">Share</string>

    <string name="open_menu_go_back">Menu/Go back</string>

    <string name="quit_app_question">Quit app?</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>

    <string name="decks">Decks</string>
    <string name="all_decks">All decks</string>
    <string name="standard_decks">Standard decks</string>
    <string name="wild_decks">Wild decks</string>
    <string name="favorite_decks">Saved decks</string>
    <string name="about_app">About app</string>
    <string name="other">Other</string>
    <string name="exit">Exit</string>

    <string name="click_on_a_card">Click on a card to view its full-size image and its personal quote</string>
    <string name="copy_deck_in_order">Copy deck code for later pasting it into Hearthstone</string>
    <string name="save_deck_description">Press the Star icon to save the deck for offline viewing</string>
    <string name="format_standard_description">Standard format</string>
    <string name="format_wild_description">Wild format</string>
    <string name="version_ph">Version: %s</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="share_url">Share URL</string>

    <string name="error_empty">Empty</string>
    <string name="error_no_saved_decks_found_desc">No saved decks found.</string>
    <string name="error_no_online_decks_found_desc">No decks found. Try edit filters.</string>
    <string name="error_loading_decks">Failed loading :(</string>
    <string name="no_browser_found">No browser found.</string>

    <string name="your_review">Your review makes a difference! uni-1F634</string>
    <string name="please_rate">Please rate the app in Google Play if you like it. uni-1F60A</string>

    <string name="select_all">Select all</string>
    <string name="filter">Filter</string>

    <string name="expansion" translatable="false">Expansion</string>
    <string name="year"  translatable="false">Year</string>
    <string name="flavor" translatable="false">Flavor</string>
    <string name="artist" translatable="false">Artist</string>

    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="enter_deck_name_here">Enter deck name (not necessarily)</string>
    <string name="choose_heroes">Choose heroes:</string>
    <string name="search">Search</string>
    <string name="change_filters">Edit</string>

</resources>