<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle1"
            android:title="@string/decks">
            <menu>
                <item
                    android:id="@+id/drawer_menu_item_standard_decks"
                    android:icon="@drawable/ic_standard"
                    android:title="@string/standard_decks" />
                <item
                    android:id="@+id/drawer_menu_item_wild_decks"
                    android:icon="@drawable/ic_wild"
                    android:title="@string/wild_decks" />
                <item
                    android:id="@+id/drawer_menu_item_my_decks"
                    android:icon="@drawable/ic_star_colorful"
                    android:title="@string/favorite_decks" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle3"
            android:title="@string/faq">
            <menu>
                <item
                    android:id="@+id/drawer_menu_item_about"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/about_app" />
            </menu>
        </item>
    </group>
</menu>