<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bck_for_deck_holder"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/tv_give_us_five_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/your_review"
        android:textColor="@color/text_1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="30dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_rate_us"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/tv_your_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:text="@string/please_rate"
        android:textColor="@color/text_2"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_solid"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_2"
            app:backgroundTint="@null" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_solid"
            android:text="@android:string/ok"
            android:textAllCaps="false"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>