<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corners_1"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_ab_back_material_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_corners_2"
            android:hint="@string/enter_deck_name_here"
            android:singleLine="true"
            android:ellipsize="end"
            android:lines="1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:paddingVertical="8dp"
            android:textColor="@color/text_1"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textColorHint="@color/text_3"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_search"
            app:layout_constraintStart_toEndOf="@id/btn_close"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_clear_text"
            android:layout_width="15dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:alpha="0.8"
            android:layout_height="15dp"
            app:layout_constraintEnd_toEndOf="@id/et_prompt"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_1" />


        <TextView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textAllCaps="true"
            android:textColor="@color/text_5"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:text="@string/choose_heroes"
                android:textColor="@color/text_1"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/text_2"
                android:gravity="end|center_vertical"
                android:minWidth="0dp"
                android:minHeight="0dp" />

            <TextView
                android:id="@+id/text_select_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/select_all"
                android:textColor="@color/text_2"
                android:textSize="12sp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_hero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:overScrollMode="never" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent_full"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_2"
            app:backgroundTint="@null" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_transparent_ripple"
            android:text="@android:string/ok"
            android:textAllCaps="false"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>