<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bck_for_app"
    tools:context=".list.ListNewsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:visibility="visible"
        android:paddingBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/progress_bar_in_main"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        layout="@layout/btn_description_progress_bar"/>
    <LinearLayout
        android:id="@+id/ll_error_loading_data"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tv_error_loading_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:text="@string/error_loading_data"/>
        <LinearLayout
            android:id="@+id/btn_reload_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bck_for_nav_bottom_buttons"
            android:padding="10dp"
            android:clickable="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bck_for_deck_holder"
                android:textSize="22sp"
                android:layout_marginRight="5dp"
                android:text="@string/retry"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_replay_24"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nav_bottom_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:weightSum="2.1"
        android:background="@color/bck_for_deck_holder"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <FrameLayout
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bck_for_nav_bottom_buttons"
            android:orientation="horizontal" >
            <View
                android:visibility="gone"
                android:id="@+id/view_pressed_state_bg_previous"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pressed_state_for_buttton"/>
            <TextView
                android:id="@+id/tv_btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:layout_gravity="center"
                android:textColor="#664444"
                android:textSize="16sp"/>

        </FrameLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>
        <FrameLayout
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bck_for_nav_bottom_buttons"
            android:orientation="horizontal" >
            <View
                android:visibility="gone"
                android:id="@+id/view_pressed_state_bg_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pressed_state_for_buttton"/>

            <TextView
                android:id="@+id/tv_btn_next"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="#330000"
                android:textSize="16sp"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>