<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_failed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:visibility="visible">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_half"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="horizontal" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_failed_anim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        app:lottie_autoPlay="true"
        android:visibility="visible"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_failed"
        app:layout_constraintBottom_toTopOf="@id/guideline_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2"
        app:lottie_speed="1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_empty_anim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="30dp"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_empty"
        app:layout_constraintBottom_toTopOf="@id/guideline_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:lottie_speed="1" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_half"
        app:layout_constraintWidth_percent="0.6">

        <TextView
            android:id="@+id/tv_error_loading_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_loading_decks"
            android:textColor="@color/text_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_error_loading_data_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_loading_decks"
            android:textColor="@color/text_3"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/info_layout">

        <LinearLayout
            android:id="@+id/btn_reload_data"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/button_stroke"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_replay_24"
                app:tint="@color/text_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/retry"
                android:textAllCaps="true"
                android:textColor="@color/text_1"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_change_filters"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/button_stroke"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_search"
                app:tint="@color/text_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/change_filters"
                android:textAllCaps="true"
                android:textColor="@color/text_1"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
